--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,17 @@
 spring:
   # 数据库配置
   datasource:
-    url: jdbc:mysql://{your_host}/{your_db}
-    username: {your_username}
-    password: {your_password}
-    driver-class-name: org.gjt.mm.mysql.Driver
+    url: jdbc:mysql://127.0.0.1/test
+    username: root
+    password: ml123456ok
+    driver-class-name: com.mysql.jdbc.Driver
+#spring:
+#  # 数据库配置
+#  datasource:
+#    url: jdbc:mysql://{your_host}/{your_db}
+#    username: {your_username}
+#    password: {your_password}
+#    driver-class-name: org.gjt.mm.mysql.Driver
   redis:
     # redis数据库索引（默认为0），我们使用索引为3的数据库，避免和其他数据库冲突
     database: 3
