--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,7 +41,7 @@ server:
 # mybatis配置
 mybatis:
   # 配置映射类所在包名
-  type-aliases-package: com.wooyoo.learning.dao.domain
+  type-aliases-package: com.ddl.learning.dao.domain
   # 配置mapper xml文件所在路径，这里是一个数组
   mapper-locations:
     - mappers/ProductMapper.xml
