--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,13 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
-
+        <!-- 测试引入自定义starter
+        <dependency>
+            <groupId>com.ddl</groupId>
+            <artifactId>hello-spring-boot-starter</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
